--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
             <div class="contents">
-              <img src="assets/images/avatar-jessica.jpeg" alt="">
+              <img src="images/avatar-jessica.jpeg" alt="">
                 <h1>Jessica Randall</h1>
                 <p id="address">London, United Kingdom</p>
                 <p id="Front-end">"Front-end developer and avid reader."</p>
